tests/test021.err
error: test021.tig:5:10: this expression does not belong to a record type
