tests/test021.tig
/* ERR: not a record */
let
  var x := 42
in
  printi(x.r)
end
